Add fixed last octet to resources
